feat(#74): implement the http port
