# api/openapi.yml
@@ -87,6 +87,30 @@ paths:
                 $ref: '#/components/schemas/GetAllMonitorByIdPayload'
         default:
           $ref: '#/components/responses/DefaultError'
+    post:
+      tags:
+        - Monitors
+      operationId: toggleMonitorPause
+      summary: Pause or unpause the monitor
+      parameters:
+        - name: monitorID
+          in: path
+          required: true
+          schema:
+            type: string
+      security:
+        - BearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ToggleMonitorPauseRequest'
+      responses:
+        '204':
+          description: OK
+        default:
+          $ref: '#/components/responses/DefaultError'
   /auth/accounts:
     post:
       tags:
@@ -127,6 +151,11 @@ paths:
           $ref: '#/components/responses/DefaultError'
 components:
   schemas:
+    ToggleMonitorPauseRequest:
+      required: [pause]
+      properties:
+        pause:
+          type: boolean
     GetAllMonitorsPayload:
       required: [page, per_page, page_count, total_count, data]
       properties:
